# WFR-Guard

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  data.py  feature_guard.py  model.py  pipeline.py  pyproject.toml  requirements.txt  utils.py  watermark.py
WFR-Guard-complete/WFR-Guard/: README.md
WFR-Guard-complete/WFR-Guard/configs/: default.yaml
WFR-Guard-complete/WFR-Guard/scripts/: create_demo_dataset.py
WFR-Guard-complete/WFR-Guard/tests/: test_feature_guard.py  test_watermark.py
